k8s/overlays/prod/ingress-tls-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ahmad-blog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - ahmadansari.site
      secretName: ahmad-blog-tls
  rules:
    - host: ahmadansari.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ahmad-blog
                port:
                  name: http
